Fix GameParticipants alignment issues in React components.

--- a/client/src/components/GamePlayerList.module.css
+++ b/client/src/components/GamePlayerList.module.css
@@ -48,10 +48,10 @@
 
 .crownContainer {
   position: relative;
-  font-size: 1.8em;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
+  font-size: 1.8em;
 }
 
 .crown {
@@ -61,13 +61,13 @@
 .proposalNumber {
   position: absolute;
   font-size: 0.5em;
-  bottom: -4px;
-  right: -4px;
+  bottom: -0.2em;
+  right: -0.2em;
   background: rgba(0, 0, 0, 0.7);
   color: white;
   border-radius: 50%;
-  width: 16px;
-  height: 16px;
+  width: 1.2em;
+  height: 1.2em;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -78,10 +78,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100%;
 }
 
 .hammer {
-  font-size: 1.2em;
+  font-size: 1em;
 }
 
 .nameColumn {
@@ -102,42 +103,42 @@
 .statusIcons {
   position: relative;
   font-size: 1.4em;
-  display: flex;
+  cursor: help;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
-  cursor: help;
 }
 
 .teamIcon {
+  position: absolute;
   color: #629ec1;
-  font-size: 1.2em;
+  font-size: 1.5em;
+  z-index: 1;
 }
 
 .waitingIcon {
+  position: relative;
   color: #4c4c4c;
-  font-size: 1em;
-  font-weight: bold;
+  z-index: 2;
 }
 
 .votedIcon {
+  position: relative;
   color: #4c4c4c;
-  font-size: 1em;
+  z-index: 2;
+  transform: translateX(-2px) translateY(-1px);
 }
 
 .approvedIcon {
+  position: relative;
   color: green;
-  font-size: 1em;
+  z-index: 2;
+  transform: translateX(1px);
 }
 
 .rejectedIcon {
+  position: relative;
   color: #ed1515;
-  font-size: 1em;
-}
-
-.statusIcons > * {
-  margin: 0 1px;
-}
-
-.statusIcons > *:not(:last-child) {
-  margin-right: 2px;
+  z-index: 2;
+  transform: translateX(1px);
 }
